[tool.poetry]
name = "secret-marks"
version = "23.10"
description = ""
authors = ["Andrew Martyanov <666ytra@gmail.com>"]
readme = "README.md"
packages = [{include = "secret_marks"}]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = {extras = ["all"], version = "^0.103.2"}
sqlalchemy = {extras = ["all"], version = "^2.0.21"}
asyncpg = "^0.28.0"
pytest = "^7.4.2"
alembic = "^1.12.0"
pytest-asyncio = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

